letter-spacing fix

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,14 +4,7 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 18px;
   color: $color-text;
-  letter-spacing: 0.02em;
-  // FIXME: перевірити цей спейсінг і видати його тільки потрібним елементам
   line-height: 1.362;
-}
-
-.Center {
-  margin: auto;
-  max-width: 970px;
 }
 
 .Header {
@@ -20,6 +13,12 @@ body {
   right: 0;
   left: 0;
   background-color: white;
+  letter-spacing: 0.02em;
+}
+
+.Center {
+  margin: auto;
+  max-width: 970px;
 }
 
 .NavList {
@@ -104,6 +103,7 @@ body {
     margin-right: auto;
     margin-left: auto;
     color: $color-light;
+    letter-spacing: 0.02em;
   }
 }
 
